--- a/web/main.html
+++ b/web/main.html
@@ -16,12 +16,16 @@
 			<div class = "header_half"></div>
 			<div class = "title">Planning Zen</div>
 			<div class = "header_half right_half">
+				<div class = "header_button" id = "get_code_button">
+					<svg class = "header_button_symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M160-240v-480 520-40Zm0 80q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h240l80 80h320q33 0 56.5 23.5T880-640v200h-80v-200H447l-80-80H160v480h200v80H160ZM584-56 440-200l144-144 56 57-87 87 87 87-56 57Zm192 0-56-57 87-87-87-87 56-57 144 144L776-56Z"/></svg>
+				</div>
 				<div class = "header_button" id = "switch_style_button">
 					<svg class = "header_button_symbol" id = "dark_mode_button" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Zm0-80q88 0 158-48.5T740-375q-20 5-40 8t-40 3q-123 0-209.5-86.5T364-660q0-20 3-40t8-40q-78 32-126.5 102T200-480q0 116 82 198t198 82Zm-10-270Z"/></svg>
 					<svg class = "header_button_symbol nodisplay" id = "light_mode_button" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M480-360q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Zm0 80q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Zm326-268Z"/></svg>
 				</div>
 			</div>
 		</div>
+		<div class = "decision_box_task noselect template" id = "task_template" draggable = "true"></div>
 		<div class = "decision_box_container">
 			<div class = "decision_box">
 				<div class = "decision_box_top_names">
@@ -32,23 +36,11 @@
 					<div class = "decision_box_side_name noselect box_cat"> Important </div>
 					<div class = "decision_box_square">
 						<div class = "decision_box_square_name noselect"> Do </div>
-						<div class = "decision_box_square_contents">
-							<div class = "decision_box_task noselect">Build the overall layout</div>
-							<div class = "decision_box_task noselect">Make the local storage system</div>
-							<div class = "decision_box_task noselect">Build an MVP</div>
-							<div class = "decision_box_add_task_button noselect">
-								<svg xmlns="http://www.w3.org/2000/svg" class = "decision_box_add_task_button_symbol" height="19px" viewBox="0 -960 960 960" width="19px"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
-							</div>
-						</div>
+						<div class = "decision_box_square_contents" id = "task_zone_do"></div>
 					</div>
 					<div class = "decision_box_square">
 						<div class = "decision_box_square_name noselect"> Schedule </div>
-						<div class = "decision_box_square_contents">
-							<div class = "decision_box_task noselect">Workplace Safety homework</div>
-							<div class = "decision_box_add_task_button noselect">
-								<svg xmlns="http://www.w3.org/2000/svg" class = "decision_box_add_task_button_symbol" height="19px" viewBox="0 -960 960 960" width="19px"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
-							</div>
-						</div>
+						<div class = "decision_box_square_contents" id = "task_zone_schedule"></div>
 					</div>
 					<div class = "decision_box_side_name spacer"></div>
 				</div>
@@ -56,27 +48,19 @@
 					<div class = "decision_box_side_name noselect box_cat"> Not important </div>
 					<div class = "decision_box_square">
 						<div class = "decision_box_square_name noselect"> Delegate </div>
-						<div class = "decision_box_square_contents">
-							<div class = "decision_box_task noselect">Add dark mode</div>
-							<div class = "decision_box_add_task_button noselect">
-								<svg xmlns="http://www.w3.org/2000/svg" class = "decision_box_add_task_button_symbol" height="19px" viewBox="0 -960 960 960" width="19px"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
-							</div>
-						</div>
+						<div class = "decision_box_square_contents" id = "task_zone_delegate"></div>
 					</div>
 					<div class = "decision_box_square">
 						<div class = "decision_box_square_name noselect"> Delete </div>
-						<div class = "decision_box_square_contents">
-							<div class = "decision_box_task noselect">New year decorations</div>
-							<div class = "decision_box_task noselect">Sleep</div>
-							<div class = "decision_box_add_task_button noselect">
-								<svg xmlns="http://www.w3.org/2000/svg" class = "decision_box_add_task_button_symbol" height="19px" viewBox="0 -960 960 960" width="19px"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
-							</div>
-						</div>
+						<div class = "decision_box_square_contents" id = "task_zone_delete"></div>
 					</div>
 					<div class = "decision_box_side_name spacer"></div>
 				</div>
 			</div>
 		</div>
-
+		
+		<!--- <div class = "decision_box_add_task_button noselect">
+			<svg xmlns="http://www.w3.org/2000/svg" class = "decision_box_add_task_button_symbol" height="19px" viewBox="0 -960 960 960" width="19px"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
+		</div> --->
 	</body>
 </html>
