very basic task dragging

--- a/web/main.html
+++ b/web/main.html
@@ -34,25 +34,29 @@
 				</div>
 				<div class = "decision_box_tb">
 					<div class = "decision_box_side_name noselect box_cat"> Important </div>
-					<div class = "decision_box_square">
+					<div class = "decision_box_square" id = "task_zone_do">
 						<div class = "decision_box_square_name noselect"> Do </div>
-						<div class = "decision_box_square_contents" id = "task_zone_do"></div>
+						<div class = "decision_box_square_highlight_box"></div>
+						<div class = "decision_box_square_contents"></div>
 					</div>
-					<div class = "decision_box_square">
+					<div class = "decision_box_square" id = "task_zone_schedule">
 						<div class = "decision_box_square_name noselect"> Schedule </div>
-						<div class = "decision_box_square_contents" id = "task_zone_schedule"></div>
+						<div class = "decision_box_square_highlight_box"></div>
+						<div class = "decision_box_square_contents"></div>
 					</div>
 					<div class = "decision_box_side_name spacer"></div>
 				</div>
 				<div class = "decision_box_tb">
 					<div class = "decision_box_side_name noselect box_cat"> Not important </div>
-					<div class = "decision_box_square">
+					<div class = "decision_box_square" id = "task_zone_delegate">
 						<div class = "decision_box_square_name noselect"> Delegate </div>
-						<div class = "decision_box_square_contents" id = "task_zone_delegate"></div>
+						<div class = "decision_box_square_highlight_box"></div>
+						<div class = "decision_box_square_contents"></div>
 					</div>
-					<div class = "decision_box_square">
+					<div class = "decision_box_square" id = "task_zone_delete">
 						<div class = "decision_box_square_name noselect"> Delete </div>
-						<div class = "decision_box_square_contents" id = "task_zone_delete"></div>
+						<div class = "decision_box_square_highlight_box"></div>
+						<div class = "decision_box_square_contents"></div>
 					</div>
 					<div class = "decision_box_side_name spacer"></div>
 				</div>
