--- a/web/main.html
+++ b/web/main.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Planning Zen</title>
+		<link rel="icon" href="resources/favicon.svg" type="image/svg+xml" sizes="any"/>
 		<link rel="stylesheet" type="text/css" href="main.css"/>
 		<link rel="stylesheet" type="text/css" href="light_mode.css"/>
 		<link rel="stylesheet" type="text/css" href="dark_mode.css"/>
@@ -14,7 +15,10 @@
 
 		<div class = "header">
 			<div class = "header_half"></div>
-			<div class = "title">Planning Zen</div>
+			<div class = "title">
+				<svg xmlns="http://www.w3.org/2000/svg" class = "title_icon" viewBox="0 -960 960 960"><path d="M342-160h276l40-160H302l40 160Zm0 80q-28 0-49-17t-28-44l-45-179h520l-45 179q-7 27-28 44t-49 17H342ZM200-400h560v-80H200v80Zm280-240q0-100 70-170t170-70q0 90-57 156t-143 80v84h320v160q0 33-23.5 56.5T760-320H200q-33 0-56.5-23.5T120-400v-160h320v-84q-86-14-143-80t-57-156q100 0 170 70t70 170Z"/></svg>
+				Planning Zen
+			</div>
 			<div class = "header_half right_half">
 				<div class = "header_button" id = "get_code_button">
 					<svg class = "header_button_symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M160-240v-480 520-40Zm0 80q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h240l80 80h320q33 0 56.5 23.5T880-640v200h-80v-200H447l-80-80H160v480h200v80H160ZM584-56 440-200l144-144 56 57-87 87 87 87-56 57Zm192 0-56-57 87-87-87-87 56-57 144 144L776-56Z"/></svg>
