basic task editing

--- a/web/main.html
+++ b/web/main.html
@@ -29,7 +29,9 @@
 				</div>
 			</div>
 		</div>
-		<div class = "decision_box_task noselect template" id = "task_template" draggable = "true"></div>
+		<div id = "task_template" class = "decision_box_task template"></div>
+		<div class = "decision_box_task_display noselect template" id = "task_display_template" draggable = "true"></div>
+		<textarea class = "decision_box_task_edit_input template" id = "task_edit_template"></textarea>
 		<div class = "decision_box_container">
 			<div class = "decision_box">
 				<div class = "decision_box_top_names">
