drag'n'drop order, some tests, minor edits

--- a/web/main.html
+++ b/web/main.html
@@ -32,6 +32,7 @@
 		<div id = "task_template" class = "decision_box_task template"></div>
 		<div class = "decision_box_task_display noselect template" id = "task_display_template" draggable = "true"></div>
 		<textarea class = "decision_box_task_edit_input template" id = "task_edit_template"></textarea>
+		<div class = "task_shadow template" id = "task_shadow_template"></div>
 		<div class = "decision_box_container">
 			<div class = "decision_box">
 				<div class = "decision_box_top_names">
