moved box names to the lower right corner

--- a/web/main.html
+++ b/web/main.html
@@ -42,7 +42,9 @@
 				<div class = "decision_box_tb">
 					<div class = "decision_box_side_name noselect box_cat"> Important </div>
 					<div class = "decision_box_square" id = "task_zone_do">
-						<div class = "decision_box_square_name noselect"> Do </div>
+						<div class = "decision_box_square_name noselect">
+							<div> Do </div>
+						</div>
 						<div class = "decision_box_square_highlight_box"></div>
 						<div class = "decision_box_square_contents"></div>
 					</div>
