renamed 'delete' section to 'don't do'

--- a/web/main.html
+++ b/web/main.html
@@ -63,7 +63,7 @@
 						<div class = "decision_box_square_contents"></div>
 					</div>
 					<div class = "decision_box_square" id = "task_zone_delete">
-						<div class = "decision_box_square_name noselect"> Delete </div>
+						<div class = "decision_box_square_name noselect"> Don't do </div>
 						<div class = "decision_box_square_highlight_box"></div>
 						<div class = "decision_box_square_contents"></div>
 					</div>
