removed excessive css

--- a/web/main.html
+++ b/web/main.html
@@ -4,8 +4,9 @@
 		<title>Planning Zen</title>
 		<link rel="icon" href="resources/favicon.svg" type="image/svg+xml" sizes="any"/>
 		<link rel="stylesheet" type="text/css" href="main.css"/>
+		<link rel="stylesheet" type="text/css" href="header.css"/>
 		<link rel="stylesheet" type="text/css" href="eisenhower.css"/>
-		<link rel="stylesheet" type="text/css" href="dropoff.css"/>
+		<link rel="stylesheet" type="text/css" href="tasks.css"/>
 		<link rel="stylesheet" type="text/css" href="light_mode.css"/>
 		<link rel="stylesheet" type="text/css" href="dark_mode.css"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
