center alignment and authorship notice

--- a/web/main.html
+++ b/web/main.html
@@ -54,10 +54,12 @@
 				<div class = "eisenhower" id = "eisenhower">
 					<table class = "eisenhower_matrix">
 						<tr>
+							<td rowspan="4" id = "landscape_padding"></td>
 							<td> </td>
 							<td class = "matrix_title top"> Urgent </td>
 							<td class = "matrix_title top"> Not urgent </td>
 							<td> </td>
+							<td rowspan="4" id = "task_name_padding"></td>
 						</tr>
 						<tr>
 							<td class = "matrix_title side"> Important </td>
@@ -80,10 +82,9 @@
 					</table>
 				</div>
 			</div>
+			<div class = "notice">
+				Made by <a href = "https://github.com/f3d0rov">f3d0rov</a>. Uses <a href="https://fonts.google.com/icons">Material Design icons</a> by Google.
+			</div>
 		</div>
-
-		<!--- <div class = "decision_box_add_task_button noselect">
-			<svg xmlns="http://www.w3.org/2000/svg" class = "decision_box_add_task_button_symbol" height="19px" viewBox="0 -960 960 960" width="19px"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
-		</div> --->
 	</body>
 </html>
