--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 	</head>
 	<body class = "dark_mode">
-		<script src="../dist/planner.js"></script>
+		<script src="dist/planner.js"></script>
 		
 		<div class = "app">
 			<div class = "header">
