--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="main.css"/>
 		<link rel="stylesheet" type="text/css" href="header.css"/>
 		<link rel="stylesheet" type="text/css" href="eisenhower.css"/>
+		<link rel="stylesheet" type="text/css" href="completed_task_list.css"/>
 		<link rel="stylesheet" type="text/css" href="tasks.css"/>
 		<link rel="stylesheet" type="text/css" href="light_mode.css"/>
 		<link rel="stylesheet" type="text/css" href="dark_mode.css"/>
@@ -19,11 +20,14 @@
 		<div class = "app">
 			<div class = "header">
 				<div class = "header_half"></div>
-				<div class = "title">
+				<div class = "title" id = "title">
 					<svg xmlns="http://www.w3.org/2000/svg" class = "title_icon" viewBox="0 -960 960 960"><path d="M342-160h276l40-160H302l40 160Zm0 80q-28 0-49-17t-28-44l-45-179h520l-45 179q-7 27-28 44t-49 17H342ZM200-400h560v-80H200v80Zm280-240q0-100 70-170t170-70q0 90-57 156t-143 80v84h320v160q0 33-23.5 56.5T760-320H200q-33 0-56.5-23.5T120-400v-160h320v-84q-86-14-143-80t-57-156q100 0 170 70t70 170Z"/></svg>
 					Planning Zen
 				</div>
 				<div class = "header_half right_half">
+					<div class = "header_button" id = "open_completed_tasks">
+						<svg class = "header_button_symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="m424-312 282-282-56-56-226 226-114-114-56 56 170 170ZM200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm0-560v560-560Z"/></svg>
+					</div>
 					<div class = "header_button" id = "get_code_button">
 						<svg class = "header_button_symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M160-240v-480 520-40Zm0 80q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h240l80 80h320q33 0 56.5 23.5T880-640v200h-80v-200H447l-80-80H160v480h200v80H160ZM584-56 440-200l144-144 56 57-87 87 87 87-56 57Zm192 0-56-57 87-87-87-87 56-57 144 144L776-56Z"/></svg>
 					</div>
@@ -82,6 +86,33 @@
 					</table>
 				</div>
 			</div>
+
+
+			<div class = "daily_tasks template" id = "daily_tasks_template">
+				<div class = "date_line">
+					<span class = "date"> completion date </span> &centerdot; <span class = "task_count"> task count </span> completed
+				</div>
+				<ul class = "day_tasks"></ul>
+			</div>
+
+			<li class = "template" id = "completed_task_template">Task name</li>
+
+			<div class = "completed_task_list_container nodisplay" id = "completed_tasks_overlay">
+				<div class = "completed_task_list">
+					<div class = "completed_task_list_header">
+						<div class = "name"> Completed tasks </div>
+						<div class = "button" id = "close_completed_task_list_button">
+							<svg viewBox="0 -960 960 960"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+						</div>
+					</div>
+					<div id = "no_completed_tasks_sign">
+						<p> "There's a million things I haven't done.
+						<p> But just you wait"
+					</div>
+					<div id = "completed_tasks"></div>
+				</div>
+			</div>
+
 			<div class = "notice">
 				Made by <a href = "https://github.com/f3d0rov">f3d0rov</a>. Uses <a href="https://fonts.google.com/icons">Material Design icons</a> by Google.
 			</div>
