Added a description for the index page

--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,10 @@
 <html>
 	<head>
 		<title>Planning Zen</title>
+		
+		<meta charset="UTF-8">
+		<meta name="description" content="A very simple, free and open-source task tracking app.">
+
 		<link rel="icon" href="resources/favicon.svg" type="image/svg+xml" sizes="any"/>
 		<link rel="stylesheet" type="text/css" href="main.css"/>
 		<link rel="stylesheet" type="text/css" href="header.css"/>
